[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "did-jis-core"
version = "0.1.0"
description = "DID:JIS - Decentralized Identifiers for JTel Identity Standard"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Jasper van de Meent", email = "jasper@humotica.nl"},
    {name = "Root AI", email = "root_idd@humotica.nl"}
]
keywords = ["did", "identity", "decentralized", "jis", "w3c", "ietf", "verifiable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/jaspertvdm/did-jis-core"
Documentation = "https://datatracker.ietf.org/doc/draft-vandemeent-jis-identity/"
"IETF Draft" = "https://datatracker.ietf.org/doc/draft-vandemeent-jis-identity/"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "did_jis_core"
